[package]
name = "aoide-webapp"
version = "0.8.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.56"
hyper = { version = "0.14.18", default-features = false }
seed = "0.9.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
url = "2.2.2"

# Workspace dependencies
aoide-core = { version = "=0.8.0", default-features = false }
aoide-core-api = "=0.8.0"
aoide-core-json = "=0.8.0"
aoide-core-api-json = { version = "=0.8.0", features = ["frontend"] }

[patch.crates-io]
aoide-core = { path = "../crates/core" }
aoide-core-json = { path = "../crates/core-json" }
aoide-core-api = { path = "../crates/core-api" }
aoide-core-api-json = { path = "../crates/core-api-json" }
