[package]
name = "aoide-webapp"
description = "aoide - [experimental] Web app prototype"
version = "0.8.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
hyper = { version = "0.14.20", default-features = false }
seed = "0.9.2"
serde = { version = "1.0.138", features = ["derive"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.31"
url = "2.2.2"

# Workspace dependencies
aoide-core = { version = "=0.8.0", features = ["js"] }
aoide-core-api = { version = "=0.8.0", features = ["js"] }
aoide-core-json = { version = "=0.8.0", features = ["js"] }
aoide-core-api-json = { version = "=0.8.0", features = ["frontend", "js"] }

[patch.crates-io]
aoide-core = { path = "../crates/core" }
aoide-core-json = { path = "../crates/core-json" }
aoide-core-api = { path = "../crates/core-api" }
aoide-core-api-json = { path = "../crates/core-api-json" }
