# SPDX-FileCopyrightText: Copyright (C) 2018-2022 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-webapp"
description = "aoide - [experimental] Web app prototype"
version = "0.8.0"
license = "AGPL-3.0-or-later"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.66"
hyper = { version = "0.14.20", default-features = false }
seed = "0.9.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.37"
url = "2.3.1"

# Workspace dependencies
aoide-core = { version = "=0.8.0", features = ["js"] }
aoide-core-api = { version = "=0.8.0", features = ["js"] }
aoide-core-json = { version = "=0.8.0", features = ["js"] }
aoide-core-api-json = { version = "=0.8.0", features = ["frontend", "js"] }

[patch.crates-io]
aoide-core = { path = "../crates/core" }
aoide-core-json = { path = "../crates/core-json" }
aoide-core-api = { path = "../crates/core-api" }
aoide-core-api-json = { path = "../crates/core-api-json" }
