# SPDX-FileCopyrightText: Copyright (C) 2018-2023 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-webcli"
description = "aoide - Media tracker CLI for web server"
repository = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = "1.0.71"
clap = "4.3.1"
env_logger = "0.10.0"
infect = "0.0.29"
#infect = { git = "https://github.com/uklotzde/infect.git" }
log = { version = "0.4.18", features = ["release_max_level_debug"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
tokio = { version = "1.28.2", default-features = false, features = ["macros", "fs", "rt-multi-thread", "signal"] }

# Workspace dependencies
aoide-client = { path = "../crates/client", features = ["webapi-backend"] }
aoide-core = { path = "../crates/core" }
aoide-core-api = { path = "../crates/core-api" }
aoide-core-api-json = { path = "../crates/core-api-json", features = ["frontend"] }
aoide-core-json = { path = "../crates/core-json" }
