# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-websrv"
description = "aoide - Standalone web server with embedded SQLite database"
publish = false
version = { workspace = true }
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
directories = "6.0.0"
discro = { version = "0.34.0", features = ["tokio"] }
dotenvy = "0.15.7"
log = { version = "0.4.26", features = ["release_max_level_debug"] }
parking_lot = "0.12.3"
ron = "0.8.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde-human-readable"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
warp = { version = "0.3.7", default-features = false }

# Workspace dependencies
aoide-backend-webapi-json = { "workspace" = true, features = ["tokio"] }
aoide-core = { "workspace" = true, features = ["serde"] }
aoide-repo-sqlite.workspace = true
aoide-storage-sqlite = { "workspace" = true, features = ["serde", "sqlite-bundled", "tokio"] }
aoide-usecases.workspace = true
aoide-usecases-sqlite.workspace = true
aoide-websrv-warp-sqlite.workspace = true

# mimalloc
[dependencies.mimalloc]
version = "0.1.43"
optional = true
# No default features, i.e. all features are optional.

# schemars
[dependencies.schemars]
version = "0.8.22"
optional = true

# launcher-ui
[dependencies.eframe]
version = "0.31.1"
optional = true
default-features = false
features = ["default_fonts", "glow", "wayland"]

[dependencies.egui]
version = "0.31.1"
optional = true
default-features = false

[dependencies.rfd]
version = "0.15.2"
optional = true
default-features = false
features = ["tokio", "xdg-portal"]

[features]
default = ["json-schema", "mimalloc", "launcher-ui"]

# Enable JSON schema support.
json-schema = ["dep:schemars", "aoide-core/json-schema", "aoide-backend-webapi-json/json-schema"]

# Use mimalloc instead of the default allocator.
mimalloc = ["dep:mimalloc"]

# Enable the launcher UI.
launcher-ui = ["dep:eframe", "dep:egui", "dep:rfd"]
