# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-websrv"
description = "aoide - Standalone web server with embedded SQLite database"
publish = false
version = { workspace = true }
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
discro.workspace = true
dotenvy = "0.15.7"
jiff.workspace = true
log = { workspace = true, features = ["release_max_level_debug"] }
parking_lot = "0.12.5"
ron.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
warp = { version = "0.4.2", default-features = false, features = ["server"] }

# Workspace dependencies
aoide-backend-webapi-json = { "workspace" = true, features = ["tokio"] }
aoide-core = { "workspace" = true, features = ["serde"] }
aoide-repo-sqlite.workspace = true
aoide-storage-sqlite = { "workspace" = true, features = ["serde", "sqlite-bundled", "tokio"] }
aoide-usecases.workspace = true
aoide-usecases-sqlite.workspace = true
aoide-websrv-warp-sqlite.workspace = true

# mimalloc
[dependencies.mimalloc]
version = "0.1.48"
optional = true
# No default features, i.e. all features are optional.

# schemars
[dependencies.schemars]
workspace = true
optional = true

# launcher-ui
[dependencies.eframe]
version = "0.33.3"
optional = true
default-features = false
features = ["default_fonts", "glow", "wayland"]

[dependencies.egui]
version = "0.33.3"
optional = true
default-features = false

[dependencies.rfd]
version = "0.17.2"
optional = true
default-features = false
features = ["xdg-portal"]

[features]
default = ["json-schema", "launcher-ui"]

# Enable JSON schema support.
json-schema = ["dep:schemars", "aoide-core/json-schema", "aoide-backend-webapi-json/json-schema"]

# Use mimalloc instead of the default allocator.
# libmusl build of mimalloc is currently broken:
# <https://github.com/purpleprotocol/mimalloc_rust/issues/133>
mimalloc = ["dep:mimalloc"]

# Enable the launcher UI.
launcher-ui = ["dep:eframe", "dep:egui", "dep:rfd"]
