# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-backend-embedded"
description = "aoide - Asynchronous API for an embedded, serverless backend (no JSON/HTTP)"
publish = false
version = "0.0.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
diesel = { version = "2.1.6", default-features = false, features = ["sqlite"] }
log = "0.4.21"
thiserror = "1.0.58"
url = "2.5.0"

# Workspace dependencies
aoide-core = { version = "=0.0.0", path = "../core" }
aoide-core-api = { version = "=0.0.0", path = "../core-api" }
aoide-media-file = { version = "=0.0.0", path = "../media-file" }
aoide-repo = { version = "=0.0.0", path = "../repo" }
aoide-repo-sqlite = { version = "=0.0.0", path = "../repo-sqlite" }
aoide-storage-sqlite = { version = "=0.0.0", path = "../storage-sqlite" }
aoide-usecases = { version = "=0.0.0", path = "../usecases" }
aoide-usecases-sqlite = { version = "=0.0.0", path = "../usecases-sqlite" }

# Optional: Serde for serialization of config files.
serde = { version = "1.0.198", features = ["derive"], optional = true }

# Optional: Tokio runtime to abort long-running, asynchronous tasks
tokio = { version = "1.37.0", optional = true }

# Optional: Tantivy search index
aoide-search-index-tantivy = { version = "=0.0.0", path = "../search-index-tantivy", optional = true }
tantivy = { version = "0.22.0", optional = true }

[features]
default = []
serde = ["dep:serde", "aoide-storage-sqlite/serde"]
tantivy = ["dep:aoide-search-index-tantivy", "dep:tantivy"]
tokio = ["dep:tokio", "aoide-storage-sqlite/tokio"]
