# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-backend-embedded"
description = "aoide - Asynchronous API for an embedded, serverless backend (no JSON/HTTP)"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
diesel = { version = "2.2.2", default-features = false, features = ["sqlite"] }
log = "0.4.22"
thiserror = "1.0.63"
url = "2.5.2"

# Workspace dependencies
aoide-core.workspace = true
aoide-core-api.workspace = true
aoide-media-file.workspace = true
aoide-repo.workspace = true
aoide-repo-sqlite.workspace = true
aoide-storage-sqlite.workspace = true
aoide-usecases.workspace = true
aoide-usecases-sqlite.workspace = true

# Optional: Serde for serialization of config files.
serde = { version = "1.0.204", features = ["derive"], optional = true }

# Optional: Tokio runtime to abort long-running, asynchronous tasks
tokio = { version = "1.39.2", optional = true }

# Optional: Tantivy search index
aoide-search-index-tantivy = { workspace = true, optional = true }
tantivy = { version = "0.22.0", optional = true }

[features]
default = []
serde = ["dep:serde", "aoide-storage-sqlite/serde"]
tantivy = ["dep:aoide-search-index-tantivy", "dep:tantivy"]
tokio = ["dep:tokio", "aoide-storage-sqlite/tokio"]
