# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-backend-embedded"
description = "aoide - Asynchronous API for an embedded, serverless backend (no JSON/HTTP)"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
diesel.workspace = true
log.workspace = true
thiserror.workspace = true
url.workspace = true

# Workspace dependencies
aoide-core.workspace = true
aoide-core-api.workspace = true
aoide-media-file.workspace = true
aoide-repo.workspace = true
aoide-repo-sqlite.workspace = true
aoide-storage-sqlite.workspace = true
aoide-usecases.workspace = true
aoide-usecases-sqlite.workspace = true

# Optional: Serde for serialization of config files.
serde = { workspace = true, features = ["derive"], optional = true }

# Optional: Tokio runtime to abort long-running, asynchronous tasks
tokio = { workspace = true, optional = true }

# Optional: Tantivy search index
aoide-search-index-tantivy = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "aoide-storage-sqlite/serde"]
tantivy = ["dep:aoide-search-index-tantivy", "dep:tantivy"]
tokio = ["dep:tokio", "aoide-storage-sqlite/tokio"]
