# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-backend-webapi-json"
description = "aoide - Asynchronous API for a standalone web server (JSON/HTTP)"
publish = false
version = "0.0.0"
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
diesel = { version = "2.2.1", default-features = false, features = ["sqlite"] }
log = "0.4.21"
nonicle = "0.1.1"
serde = { version = "1.0.203" }
thiserror = "1.0.61"
url = "2.5.1"

# tracing
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.8.0", features = ["v4"] }

# JSON Schema (optional)
schemars = { version = "0.8.21", optional = true }

# Workspace dependencies
aoide-backend-embedded = { path = "../backend-embedded" }
aoide-core = { path = "../core", features = ["serde"] }
aoide-core-api = { path = "../core-api" }
aoide-core-json = { path = "../core-json" }
aoide-core-api-json = { path = "../core-api-json", features = ["backend"] }
aoide-media-file = { path = "../media-file", features = ["gigtag"] }
aoide-repo = { path = "../repo" }
aoide-repo-sqlite = { path = "../repo-sqlite" }
aoide-usecases = { path = "../usecases" }
aoide-usecases-sqlite = { path = "../usecases-sqlite" }

[features]
default = []
tokio = ["aoide-backend-embedded/tokio"]
json-schema = [
    "dep:schemars",
    "aoide-core/json-schema",
    "aoide-core-api-json/json-schema",
    "aoide-core-json/json-schema",
]
