# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-backend-webapi-json"
description = "aoide - Asynchronous API for a standalone web server (JSON/HTTP)"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
diesel = { version = "2.2.2", default-features = false, features = ["sqlite"] }
log = "0.4.22"
nonicle = "0.1.1"
serde = { version = "1.0.206" }
thiserror = "1.0.63"
url = "2.5.2"

# tracing
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.10.0", features = ["v4"] }

# JSON Schema (optional)
schemars = { version = "0.8.21", optional = true }

# Workspace dependencies
aoide-backend-embedded.workspace = true
aoide-core = { workspace = true, features = ["serde"] }
aoide-core-api.workspace = true
aoide-core-json.workspace = true
aoide-core-api-json = { "workspace" = true, features = ["backend"] }
aoide-media-file = { "workspace" = true, features = ["gigtag"] }
aoide-repo.workspace = true
aoide-repo-sqlite.workspace = true
aoide-usecases.workspace = true
aoide-usecases-sqlite.workspace = true

[features]
default = []
tokio = ["aoide-backend-embedded/tokio"]
json-schema = [
    "dep:schemars",
    "aoide-core/json-schema",
    "aoide-core-api-json/json-schema",
    "aoide-core-json/json-schema",
]
