# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-backend-webapi-json"
description = "aoide - Asynchronous API for a standalone web server (JSON/HTTP)"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
diesel.workspace = true
log.workspace = true
nonicle.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

# tracing
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.12.0", features = ["v4"] }

# JSON Schema (optional)
schemars = { version = "0.8.21", optional = true }

# Workspace dependencies
aoide-backend-embedded.workspace = true
aoide-core = { workspace = true, features = ["serde"] }
aoide-core-api.workspace = true
aoide-core-json.workspace = true
aoide-core-api-json = { "workspace" = true, features = ["backend"] }
aoide-media-file = { "workspace" = true, features = ["gigtag"] }
aoide-repo.workspace = true
aoide-repo-sqlite.workspace = true
aoide-usecases.workspace = true
aoide-usecases-sqlite.workspace = true

[features]
default = []
tokio = ["aoide-backend-embedded/tokio"]
json-schema = [
  "dep:schemars",
  "aoide-core/json-schema",
  "aoide-core-api-json/json-schema",
  "aoide-core-json/json-schema",
]
