# SPDX-FileCopyrightText: Copyright (C) 2018-2023 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-client"
description = "aoide - [experimental] Unidirectional dataflow client components"
repository = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
infect = "0.0.29"
#infect = { git = "https://github.com/uklotzde/infect.git" }
log = "0.4.19"
serde = { version = "1.0.182", features = ["derive"], optional = true }
serde_json = "1.0.104"
serde_urlencoded = "0.7.1"
static_assertions = "1.1.0"

# Optional dependencies for feature webapi-backend
reqwest = { version = "0.11.18", optional = true, default-features = false, features = [
    "rustls-tls",
] }

# Workspace dependencies
aoide-core = { path = "../core", features = ["serde"] }
aoide-core-api = { path = "../core-api" }
aoide-core-api-json = { path = "../core-api-json", features = ["frontend"] }
aoide-core-json = { path = "../core-json" }

[features]
default = []
webapi-backend = ["dep:reqwest"]
