# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-api-json"
description = "aoide - JSON mapping for aoide-core-api boundary types"
publish = false
version = "0.0.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }

# JSON Schema (optional)
schemars = { version = "0.8.16", optional = true, features = ["url"] }

# Workspace dependencies
aoide-core = { version = "=0.0.0", path = "../core", features = ["serde"] }
aoide-core-api = { version = "=0.0.0", path = "../core-api" }
aoide-core-json = { version = "=0.0.0", path = "../core-json" }

[features]
default = []
frontend = []
backend = []
json-schema = ["dep:schemars", "aoide-core/json-schema", "aoide-core-json/json-schema"]
