# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-api-json"
description = "aoide - JSON mapping for aoide-core-api boundary types"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }

# JSON Schema (optional)
schemars = { version = "0.8.21", optional = true, features = ["url"] }

# Workspace dependencies
aoide-core = { "workspace" = true, features = ["serde"] }
aoide-core-api.workspace = true
aoide-core-json.workspace = true

[features]
default = []
frontend = []
backend = []
json-schema = ["dep:schemars", "aoide-core/json-schema", "aoide-core-json/json-schema"]
