# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-api"
description = "aoide - Shared boundary types for repositories and usecases"
repository = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
strum = { version = "0.26.0", features = ["derive"] }
url = "2.5.0"

# Workspace dependencies
aoide-core = { version = "=0.8.0", path = "../core" }

[features]
default = []
# Feature to enable JavaScript bindings on wasm32-unknown-unknown
js = ["aoide-core/js"]
