# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-api"
description = "aoide - Shared boundary types for repositories and usecases"
publish = false
version = "0.0.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
strum = { version = "0.26.3", features = ["derive"] }
url = "2.5.2"

# Workspace dependencies
aoide-core = { version = "=0.0.0", path = "../core" }

[features]
default = []
