# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-api"
description = "aoide - Shared boundary types for repositories and usecases"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
strum = { workspace = true, features = ["derive"] }
url.workspace = true

# Workspace dependencies
aoide-core.workspace = true

[features]
default = []
