# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-json"
description = "aoide - JSON mapping for aoide-core boundary types"
publish = false
version = "0.0.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
data-encoding = "2.6.0"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
url = { version = "2.5.2", features = ["serde"] }

# JSON Schema (optional)
schemars = { version = "0.8.21", optional = true, features = ["chrono", "url"] }
chrono = { version = "0.4.38", optional = true, default-features = false }

# Workspace dependencies
aoide-core = { version = "=0.0.0", path = "../core", features = ["serde"] }

[features]
default = []
json-schema = ["dep:schemars", "dep:chrono", "aoide-core/json-schema"]

[dev-dependencies]
serde_json = "1.0.120"
