# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-json"
description = "aoide - JSON mapping for aoide-core boundary types"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
data-encoding.workspace = true
mime.workspace = true
nonicle.workspace = true
semval.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1.19"
url = { workspace = true, features = ["serde"] }

# JSON Schema (optional)
schemars = { version = "0.8.21", optional = true, features = ["chrono", "url"] }
chrono = { version = "0.4.39", optional = true, default-features = false }

# Workspace dependencies
aoide-core = { "workspace" = true, features = ["serde"] }

[features]
default = []
js = ["aoide-core/js"]
json-schema = ["dep:schemars", "dep:chrono", "aoide-core/json-schema"]

[dev-dependencies]
serde_json.workspace = true
