# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core-json"
description = "aoide - JSON mapping for aoide-core boundary types"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
data-encoding.workspace = true
jiff = { workspace = true, features = ["serde"] }
mime.workspace = true
log.workspace = true
nonicle.workspace = true
semval.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1.20"
url = { workspace = true, features = ["serde"] }

# JSON Schema (optional)
chrono = { version = "0.4.42", optional = true, default-features = false }
schemars = { workspace = true, optional = true, features = ["chrono04", "jiff02", "url2"] }
serde_json = { workspace = true, optional = true }

# Workspace dependencies
aoide-core = { "workspace" = true, features = ["serde"] }

[features]
default = []
js = ["aoide-core/js"]
json-schema = ["dep:chrono", "dep:schemars", "dep:serde_json", "aoide-core/json-schema"]

[dev-dependencies]
serde_json.workspace = true
