# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-core"
description = "aoide - Core domain model"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
aho-corasick.workspace = true
bitflags.workspace = true
data-encoding.workspace = true
derive_more = { workspace = true, features = ["display", "error"] }
image = { workspace = true, features = ["png"] }
jiff.workspace = true
mime.workspace = true
nonicle.workspace = true
num-integer = "0.1.46"
rand = "0.9.0"
regex.workspace = true
semval.workspace = true
smol_str.workspace = true
strum = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["macros", "parsing", "formatting"] }
ulid = "1.2.1"
url.workspace = true

# Serialization of selected, primitive types
serde = { workspace = true, optional = true, features = ["derive"] }

# JSON Schema (optional)
schemars = { version = "0.8.22", optional = true, features = ["url"] }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = "0.3.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
path-slash = "0.2.1"

[dev-dependencies]
data-url = "0.3.1"
serde_json.workspace = true

[features]
default = []
# Feature to enable JavaScript bindings on wasm32-unknown-unknown
js = ["getrandom/wasm_js", "jiff/js", "time/wasm-bindgen"]
serde = ["dep:serde", "smol_str/serde", "time/serde-human-readable", "ulid/serde", "url/serde"]
json-schema = ["serde", "dep:serde_json", "dep:schemars"]
