# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-desktop-app"
description = "aoide - Desktop app support"
publish = false
version = "0.0.0"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
discro = { version = "0.29.2", features = ["tokio"] }
highway = { version = "1.1.0" }
log = "0.4.21"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false }
thiserror = "1.0.59"
unnest = "0.3.1"
url = { version = "2.5.0", features = ["serde"] }

# Workspace dependencies
aoide-backend-embedded = { version = "=0.0.0", path = "../backend-embedded", features = [
    "tokio",
    "serde",
] }
aoide-core = { version = "=0.0.0", path = "../core", features = ["serde"] }
aoide-core-api = { version = "=0.0.0", path = "../core-api" }
aoide-media-file = { version = "=0.0.0", path = "../media-file" }
aoide-repo = { version = "=0.0.0", path = "../repo" }
aoide-storage-sqlite = { version = "=0.0.0", path = "../storage-sqlite" }

[dependencies.rfd]
version = "0.14.1"
optional = true
default-features = false
features = ["tokio", "xdg-portal"]

[features]
default = []
async-file-dialog = ["dep:rfd"]
