# SPDX-FileCopyrightText: Copyright (C) 2018-2024 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-desktop-app"
description = "aoide - Desktop app support"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
discro = { version = "0.29.3", features = ["tokio"] }
highway = { version = "1.2.0" }
log = "0.4.22"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", default-features = false }
thiserror = "1.0.63"
unnest = "0.3.1"
url = { version = "2.5.2", features = ["serde"] }

# Workspace dependencies
aoide-backend-embedded = { "workspace" = true, features = ["tokio", "serde"] }
aoide-core = { "workspace" = true, features = ["serde"] }
aoide-core-api.workspace = true
aoide-media-file.workspace = true
aoide-repo.workspace = true
aoide-storage-sqlite.workspace = true

[dependencies.rfd]
version = "0.14.1"
optional = true
default-features = false
features = ["tokio", "xdg-portal"]

[features]
default = []
async-file-dialog = ["dep:rfd"]
