# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-desktop-app"
description = "aoide - Desktop app support"
publish = false
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
discro = { version = "0.34.0", features = ["tokio"] }
highway = { version = "1.3.0" }
log.workspace = true
ron = "0.10.1"
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
thiserror.workspace = true
unnest = "0.3.1"
url = { workspace = true, features = ["serde"] }

# Workspace dependencies
aoide-backend-embedded = { "workspace" = true, features = ["tokio", "serde"] }
aoide-core = { "workspace" = true, features = ["serde"] }
aoide-core-api.workspace = true
aoide-media-file.workspace = true
aoide-repo.workspace = true
aoide-storage-sqlite.workspace = true

[dependencies.rfd]
version = "0.15.3"
optional = true
default-features = false
features = ["tokio", "xdg-portal"]

[features]
default = []
async-file-dialog = ["dep:rfd"]
