[package]
name = "aoide-index-tantivy"
description = "Utilities for a full-text search index based on Tantivy"
version = "0.8.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.56"
# Unfortunately Tantivy depends on chrono for date fields
chrono = "0.4.19"
num-traits = "0.2.14"
log = "0.4.16"
tantivy = "0.17.0"
thiserror = "1.0.30"

# Workspace dependencies
aoide-core = "*"

[features]
default = []
