[package]
name = "aoide-index-tantivy"
description = "Utilities for a full-text search index based on Tantivy"
version = "0.8.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
num-traits = "0.2.15"
log = "0.4.17"
tantivy = "0.18.0"
thiserror = "1.0.31"

# Workspace dependencies
aoide-core = "=0.8.0"

[features]
default = []
